# ecoworthy-bms-monitor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.ps1  build.sh  ecoworthy-bms-monitor.spec  pyproject.toml  run.py
docs/: NINA.md
ecoworthy_bms/: __init__.py  __main__.py  alerts.py  autostart.py  config.py  history.py  i18n.py  model.py  profiles.py  reader_service.py  theme.qss  tray.py
ecoworthy_bms/safety/: __init__.py  actions.py  alpaca.py  failsafe.py
ecoworthy_bms/translations/: README.md  app.ts
ecoworthy_bms/ui/: bank.py  cells.py  history_page.py  main_window.py  messages.py  monitor.py  settings.py
ecoworthy_bms/widgets/: battery_cells.py
tests/: _gui_construct_check.py  _render_pages.py  _render_preview.py  test_actions.py  test_alerts.py  test_alpaca.py  test_autostart.py  test_config.py  test_failsafe.py  test_history.py  test_i18n.py  test_model.py  test_profiles.py  test_tray.py
